--- a/retrofitlibrary/build.gradle
+++ b/retrofitlibrary/build.gradle
@@ -51,7 +51,7 @@ ext {
 }
 uploadArchives {
     repositories.mavenDeployer {
-        def mavenDirPath = file('\\Users\\shenqichao\\Desktop\\gitaars') // 本地存放目录(自行选择)，可放在gradle.properties文件中引用
+        def mavenDirPath = file('\\gitaars') // 本地存放目录(自行选择)，可放在gradle.properties文件中引用
         repository(url:"file://${mavenDirPath.absolutePath}") // 必须双引号，单引号不会转义$
         pom.project {
             groupId project.PUBLISH_GROUP_ID // 可以随意取，一般取包名
